# rcontact_v2

./: .env.example  .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260313_000001_create_contact_tables.rs
src/: lib.rs  main.rs
src/app/dto/: email.rs  mobile.rs  person.rs
src/app/handler/: emails.rs  healths.rs  mobiles.rs  persons.rs
src/app/repository/: email_repository.rs  mobile_repository.rs  person_repository.rs
src/app/route/: mod.rs
src/app/service/: email_service.rs  mobile_service.rs  mod.rs  person_service.rs
src/entity/: email.rs  mobile.rs  mod.rs  person.rs  prelude.rs
src/pkg/config/: app_config.rs
src/pkg/web/: web.rs
