[package]
name = "contact-management"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
